<resources>
    <string name="app_name">SugarDays</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_today">Jump to Today</string>
    <string name="action_reminder">Set Reminder</string>
    <string name="dialog_reminder_title">Remind me in</string>
    <string name="notification_reminder_title">Reminder</string>
    <string name="notification_reminder_content">Tap to make an entry</string>

    <string-array name="reminder_options">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>2 hours</item>
        <item>3 hours</item>
    </string-array>

    <string name="today">Today</string>
    <string name="calendar_dropdown_arrow_desc">Calendar dropdown arrow</string>

    <string name="action_title_add_entry">Add entry</string>
    <string name="action_title_edit_entry">Edit entry</string>
    <string name="delete_entry">Delete entry</string>
    <string name="action_save">Save</string>
    <string name="action_discard">Discard</string>
    <string name="action_clear">Clear</string>
    <string name="action_delete">Delete</string>
    <string name="empty">Empty</string>

    <string name="question_save_changes">Save this entry?</string>
    <string name="question_delete_entry">Delete this entry?</string>

    <string-array name="entry_types">
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
        <item>Bedtime</item>
        <item>Other</item>
    </string-array>

    <string name="location_hint">Location</string>
    <string name="current_location_button_desc">Pick location</string>

    <string name="change_photo">Change</string>
    <string name="take_photo">Take photo</string>
    <string name="choose_photo">Choose photo</string>
    <string name="remove_photo">Remove photo</string>
    <string name="take_new_photo">Take new photo</string>
    <string name="choose_new_photo">Choose new photo</string>

    <string name="add_food">Add food</string>
    <string name="edit_food">Edit food</string>
    <string name="food_hint">Food name or description</string>
    <string name="quantity_hint">Quantity</string>
    <string name="carbs_hint">Carbs</string>
    <string name="grams_condensed">g</string>
    <string name="scan_barcode">Scan barcode</string>
    <string name="barcode_food_not_found">Food not found</string>

    <string name="correction">corr. bolus</string>
    <string name="meal">meal bolus</string>

    <string name="basal_label">basal</string>
    <string name="temp_basal_label">temp basal</string>
    <string name="temp_basal_dialog_title">Set temp basal</string>
    <string name="temp_basal_duration_label">duration (hh:mm)</string>
    <string name="temp_basal_rate_label">rate (%)</string>

    <string name="add_pill">Add pill</string>

    <string name="notes_hint">Notes</string>

    <!-- Preferences -->
    <string name="off">Off</string>
    <string name="on">On</string>

    <string name="pref_cat_gen_title">General</string>

    <string name="pref_insulin_title">Insulin therapy</string>
    <string-array name="pref_insulin_entries">
        <item>No insulin</item>
        <item>Pen/Syringes</item>
        <item>Pump</item>
    </string-array>

    <string name="pref_pills_title">Pills</string>
    <string name="pref_pills_default_summary">N/A</string>

    <string name="pref_bgUnits_title">Blood glucose unit</string>
    <string-array name="pref_bgUnits_entries">
        <item>mg/dL</item>
        <item>mmol/L</item>
    </string-array>

    <string name="pref_pills_edit_text_hint">"Pill name"</string>

    <string name="pref_hypo_title">Hypo</string>
    <string name="pref_targetRange_title">Target range</string>
    <string name="pref_hyper_title">Hyper</string>

    <string name="pref_scr_bolus_predict_title">Bolus prediction</string>
    <string name="pref_bolus_predict_off_summary">When this feature is turned on, the app will automatically calculate your bolus intake using the following personalized factors:\n1) Optimal blood glucose.\n2) Correction factor (insulin sensitivity).\n3) Carb-to-insulin ratio.\n\nPlease note, user discretion is advised as the above factors are only estimates and variations may occur.</string>
    <string name="pref_optimal_bg_title">Optimal blood glucose</string>
    <string name="pref_correction_factor_title">Correction factor</string>
    <string name="pref_carb_to_insulin_title">Insulin-to-carb ratio</string>
    <string name="per_insulin_unit">per insulin unit</string>
    <string name="grams_of_carb">g of carb</string>
    <string name="pref_insulin_increment_title">Insulin increment</string>

    <string name="pref_cat_extras_title">Extras</string>

    <string name="pref_compress_photos_title">Compress photos</string>
    <string name="pref_auto_location_title">Automatically register location</string>

    <string name="content_desc_photo">Photo</string>
    <string name="content_desc_clear">Remove this item</string>
    <string name="content_desc_google_attribution">Powered by Google</string>
    <string name="content_desc_fatsecret_attribution">Powered by FatSecret</string>

    <string name="settings">Settings</string>
    <string name="feedback">Send feedback</string>
    <string name="about">About</string>

    <string name="welcome">Welcome to SugarDays!</string>
    <string name="welcome_content">"Apologies for the absence of a proper tutorial (it'll come later).\nPlease check out the app's settings in order to get the most out of it."</string>

    <string-array name="pill_quantities">
        <item>0.5</item>
        <item>1.0</item>
        <item>1.5</item>
        <item>2.0</item>
        <item>2.5</item>
        <item>3.0</item>
        <item>3.5</item>
        <item>4.0</item>
        <item>4.5</item>
        <item>5.0</item>
        <item>5.5</item>
        <item>6.0</item>
        <item>6.5</item>
        <item>7.0</item>
        <item>7.5</item>
        <item>8.0</item>
        <item>8.5</item>
        <item>9.0</item>
        <item>9.5</item>
        <item>10.0</item>
        <item>10.5</item>
        <item>11.0</item>
        <item>11.5</item>
        <item>12.0</item>
        <item>12.5</item>
        <item>13.0</item>
        <item>13.5</item>
        <item>14.0</item>
        <item>14.5</item>
        <item>15.0</item>
        <item>15.5</item>
        <item>16.0</item>
        <item>16.5</item>
        <item>17.0</item>
        <item>17.5</item>
        <item>18.0</item>
        <item>18.5</item>
        <item>19.0</item>
        <item>19.5</item>
        <item>20.0</item>
    </string-array>

    <string-array name="pref_insulin_entryValues">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="pref_insulin_default">0</string>

    <string-array name="pref_bgUnits_entryValues">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string name="pref_bgUnits_default">0</string>

    <string-array name="pref_insulin_increment_entries">
        <item>1</item>
        <item>0.5</item>
        <item>0.25</item>
        <item>0.1</item>
        <item>0.05</item>
        <item>0.025</item>
    </string-array>
    <string-array name="pref_insulin_increment_entryValues">
        <item>1</item>
        <item>0.5</item>
        <item>0.25</item>
        <item>0.1</item>
        <item>0.05</item>
        <item>0.025</item>
    </string-array>
</resources>