<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <com.mr_starktastic.sugardays.widget.LoadingAutoCompleteTextView
                android:id="@+id/food_name_auto_complete_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/food_hint"
                android:imeOptions="actionNext"
                android:textSize="16sp" />
        </android.support.design.widget.TextInputLayout>

        <ProgressBar
            android:id="@+id/food_loading_indicator"
            style="?android:progressBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/icon_margin"
            android:visibility="gone" />
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="@dimen/tiny_margin"
        android:contentDescription="@string/content_desc_fatsecret_attribution"
        android:src="@drawable/ic_powered_by_fatsecret" />

    <LinearLayout
        android:id="@+id/quantity_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/quantity_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="3"
                android:hint="@string/quantity_hint"
                android:inputType="numberDecimal"
                android:textSize="16sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/serving_spinner"
            style="@style/Widget.AppCompat.Spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:layout_marginTop="@dimen/tiny_margin" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/tiny_margin">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/carbs_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="3"
                android:hint="@string/carbs_hint"
                android:inputType="numberDecimal"
                android:textSize="16sp" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:layout_marginStart="@dimen/tiny_margin"
            android:layout_marginTop="@dimen/tiny_margin"
            android:text="@string/grams_condensed"
            android:textColor="@android:color/primary_text_light"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>